--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "AI Journal",
     "short_name": "Journal",
     "description": "A private, encrypted journaling app for mental health support",
-    "start_url": "/",
+    "start_url": "./index.html",
     "display": "standalone",
     "background_color": "#0a0a0f",
     "theme_color": "#0a0a0f",
@@ -21,5 +21,9 @@
             "purpose": "any maskable"
         }
     ],
-    "categories": ["health", "lifestyle", "productivity"]
+    "categories": [
+        "health",
+        "lifestyle",
+        "productivity"
+    ]
 }
