chore: cleaning up network

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,7 +8,14 @@ FLASK_ENV=development
 # Render sets this automatically when you attach a PostgreSQL database
 # DATABASE_URL=postgresql://user:password@host:5432/dbname
 
-# Anthropic API
+# Ollama LLM Settings (for local inference)
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=phi3:mini
+OLLAMA_TIMEOUT=60
+OLLAMA_MAX_RETRIES=3
+OLLAMA_RETRY_DELAY=1.0
+
+# Anthropic API (legacy - not used when Ollama is configured)
 ANTHROPIC_API_KEY=your-anthropic-api-key-here
 ANTHROPIC_MODEL=claude-sonnet-4-20250514
 
