--- a/render.yaml
+++ b/render.yaml
@@ -14,6 +14,9 @@ services:
           property: connectionString
       - key: ANTHROPIC_API_KEY
         sync: false
+      # Ollama configuration (if self-hosting)
+      # - key: OLLAMA_BASE_URL
+      #   value: http://your-ollama-server:11434
       - key: CORS_ORIGINS
         sync: false
 
